    file paths against.
 8. Store song ratings in MPD's sticker DB. Ratings stored using 'rating' key
    and values 0 to 10. In the UI, ratings are show as 5 stars.
 9. If we fail to download a cover, don't keep trying next time song is played.
10. Simplify toolbar cover widget, no border.
11. Allow Qt preference dialog to shrink smaller. If screen size is less than
    800px, then views page is re-arranged to allow much smaller dialog.
12. Support MPDs "find modified-since" with MPD 0.19 and newer. If a number is
    entered it is taken to be 'modified since X days in past', otherwise a date
    should be entered (e.g. 01/12/2001 to find all tracks since 1st Dec 2001)
    Cantata will first try to convert from your locale date format, default
    date format, and then ISO date format.
13. Show covers in search results.
14. Show performer in cover tooltip if this is set and different to album
    artist.
15. Always large action icons for grid view.
16. Increase gap between add and play icons in grid view.
17. Disable volume fade on stop by default - this is really something MPD
    itself should implement.
18. Remove 'Add albums in random order' from view context menus.
19. Reorganize playqueue context menu.
20. Use 'Metadata' and not 'Tags' as metadata/tags view in context song pane.

1.4.1
-----
 1. Remove unused var warning when compiling without online services.
 2. Remove some moc/QObject warnings in KDE builds without streams or http
    server.
 3. Update current song to scrobble, even if disabled, so that when enabled we
    can scrobble.
 4. Seems like MPDSribble itself is broken with regards to sending "love"
    status, so remove MPDScribble from list of scrobblers.
 5. Last.fm replies are XML, so decode these properly!
 6. Don't log scrobbler session key to debug file.
 7. Remove extra margin in podcast settings dialog.
 8. When adjusting track numbers in tag editor, start from first actual track.